@@ -1,3 +1,14 @@
+2003-03-20  Alexandre Oliva  <aoliva@redhat.com>
+
+	* sysdeps/mips/dl-machine.h (ELF_MIPS_GNU_GOT1_MASK): Define
+	properly for n64.
+	(elf_machine_runtime_setup): Cast link_map pointer to Elf Addr
+	type.
+	(elf_machine_rel, elf_machine_rel_relative): Cast symidx to Elf
+	Word before comparing with gotsym.  Take reloc_addr argument as
+	void*.  Remove the code added for the compiler to drop any
+	alignment assumptions.
+
 2003-03-19  Ulrich Drepper  <drepper@redhat.com>
 
 	* Makefile (distribute): Add include/atomic.h and bits/atomic.h.
